[gd_scene load_steps=6 format=3 uid="uid://dyclknruy8aqf"]

[ext_resource type="PackedScene" uid="uid://xrt2j78g3fc" path="res://addons/godot-xr-tools2/construct/xrt2_construct.tscn" id="1_o7mvy"]
[ext_resource type="Script" uid="uid://dms3vksv6tel5" path="res://construct.gd" id="2_8sb5x"]
[ext_resource type="PackedScene" uid="uid://xrt23kyre42" path="res://addons/godot-xr-tools2/construct/xrt2_spectator_camera.tscn" id="2_hkn0h"]
[ext_resource type="PackedScene" uid="uid://cj2av4gb40wn4" path="res://main.tscn" id="2_p0jir"]
[ext_resource type="Texture2D" uid="uid://u6nldwj0320i" path="res://assets/main/splash.png" id="3_51pj4"]

[node name="Xrt2Construct" instance=ExtResource("1_o7mvy")]
script = ExtResource("2_8sb5x")

[node name="DesktopSubViewport" parent="DesktopContainer" index="0"]
disable_3d = true

[node name="LoadingImage" type="TextureRect" parent="DesktopContainer/DesktopSubViewport" index="0"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_51pj4")
expand_mode = 2
stretch_mode = 5

[node name="Xrt2SpectatorCamera" parent="DesktopContainer/DesktopSubViewport" index="1" instance=ExtResource("2_hkn0h")]
unique_name_in_owner = true
transform = Transform3D(-0.772577, 0.196973, -0.603594, 0.00228937, 0.951519, 0.307582, 0.634916, 0.236249, -0.735573, -0.993, 2.0438, -2.63003)

[node name="Main" parent="VRSubViewport" index="0" instance=ExtResource("2_p0jir")]

[connection signal="showing_loaded_scene" from="VRSubViewport/Main" to="." method="_on_main_showing_loaded_scene"]
[connection signal="showing_loading_screen" from="VRSubViewport/Main" to="." method="_on_main_showing_loading_screen"]
